// Generated by jsonschema2protobuf.  DO NOT EDIT!
// Source file: ../semgrep-app/frontend/semgrep-interfaces/semgrep_output_v0.jsonschema
// Source file sha256 digest: bd80d34ac5520a9318d2e306ca5ae69eb5ed87efbb5fe6a22021e412949f1186

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

package cli;

message CliOutput {
  string version = 508888787;
  repeated CliError errors = 179828283;
  repeated CliMatch results = 260545850;
  CliPaths paths = 109417774;
  CliTiming time = 3117011;
}

message Position {
  int64 line = 3117964;
  int64 col = 107328;
  int64 offset = 196558931;
}

message Location {
  string path = 3212859;
  Position start = 110621538;
  Position end = 99611;
}

message CoreMatch {
  string rule_id = 42354089;
  Location location = 206711021;
  CoreMatchExtra extra = 93093008;
}

message CoreMatchExtra {
  string message = 337998899;
  map<string, MetavarValue> metavars = 81814710;
  DataflowTrace dataflow_trace = 359307815;
}

message DataflowTrace {
  repeated Location taint_source = 109601574;
  repeated Location intermediate_vars = 308706979;
}

message MetavarValue {
  Position start = 110621538;
  Position end = 99611;
  string abstract_content = 75232495;
  SvalueValue propagated_value = 269991092;
  UniqueId unique_id = 445148607;
}

message SvalueValue {
  Position svalue_start = 430292789;
  Position svalue_end = 313081881;
  string svalue_abstract_content = 526101672;
}

message UniqueId {
  google.protobuf.Any type = 3120390;
  string md5sum = 10884057;
  int64 sid = 99470;
}

message CoreError {
  string rule_id = 42354089;
  google.protobuf.Any error_type = 428933134;
  google.protobuf.Any severity = 191113633;
  Location location = 206711021;
  string message = 337998899;
  string details = 28147206;
}

message CoreStats {
  int64 okfiles = 367609694;
  int64 errorfiles = 374129212;
}

message SkippedTarget {
  string path = 3212859;
  google.protobuf.Any reason = 34014402;
  string details = 28147206;
  string rule_id = 42354089;
}

message SkippedRule {
  string rule_id = 42354089;
  string details = 28147206;
  Position position = 206964729;
}

message CoreTiming {
  repeated TargetTime targets = 253663046;
  repeated string rules = 109321335;
  float rules_parse_time = 367689164;
}

message TargetTime {
  string path = 3212859;
  repeated RuleTimes rule_times = 352413596;
  float run_time = 463101456;
}

message RuleTimes {
  string rule_id = 42354089;
  float parse_time = 503016756;
  float match_time = 505312582;
}

message CveResult {
  string url = 107439;
  string filename = 228703562;
  repeated string funcnames = 140608666;
}

message CoreMatchResults {
  repeated CoreMatch matches = 363750006;
  repeated CoreError errors = 179828283;
  repeated SkippedTarget skipped = 480732762;
  repeated SkippedRule skipped_rules = 55568936;
  CoreStats stats = 109757599;
  CoreTiming time = 3117011;
}

message CliError {
  int64 code = 3108531;
  string level = 102865796;
  string type = 3120390;
  string rule_id = 42354089;
  string message = 337998899;
  string path = 3212859;
  string long_msg = 242299620;
  string short_msg = 7220394;
  repeated ErrorSpan spans = 109578729;
  string help = 3443615;
}

message ErrorSpan {
  string file = 3116036;
  PositionBis start = 110621538;
  PositionBis end = 99611;
  string source_hash = 412117553;
  PositionBis config_start = 476302353;
  PositionBis config_end = 359091445;
  repeated string config_path = 261927867;
  PositionBis context_start = 424938157;
  PositionBis context_end = 12625475;
}

message PositionBis {
  int64 line = 3117964;
  int64 col = 107328;
}

message CliMatch {
  string check_id = 244492357;
  string path = 3212859;
  Position start = 110621538;
  Position end = 99611;
  CliMatchExtra extra = 93093008;
}

message CliMatchExtra {
  map<string, MetavarValue> metavars = 81814710;
  string fingerprint = 426561151;
  string lines = 109322879;
  string message = 337998899;
  google.protobuf.Any metadata = 534382816;
  string severity = 191113633;
  string fix = 118677;
  FixRegex fix_regex = 391937584;
  bool is_ignored = 531173073;
  bool dependency_match_only = 379345809;
  google.protobuf.Any dependency_matches = 288721032;
  repeated string fixed_lines = 405597072;
  DataflowTrace dataflow_trace = 359307815;
}

message FixRegex {
  string regex = 113933639;
  string replacement = 21088776;
  int64 count = 110521423;
}

message CliOutputExtra {
  CliPaths paths = 109417774;
  CliTiming time = 3117011;
}

message CliPaths {
  repeated string scanned = 478818202;
//TODO: this generates a parse error right now, weird
//  string _comment = 528651539;
  repeated CliSkippedTarget skipped = 480732762;
}

message CliSkippedTarget {
  string path = 3212859;
  string reason = 34014402;
}

message CliTiming {
  repeated RuleIdDict rules = 109321335;
  float rules_parse_time = 367689164;
  map<string, float> profiling_times = 190109087;
  repeated CliTargetTimes targets = 253663046;
  int64 total_bytes = 525010859;
}

message RuleIdDict {
  string id = 3205;
}

message CliTargetTimes {
  string path = 3212859;
  int64 num_bytes = 49709845;
  repeated float match_times = 189904321;
  repeated float parse_times = 187608495;
  float run_time = 463101456;
}

message ApiScansFindings {
  repeated Finding findings = 343207531;
  string token = 104702585;
  string gitlab_token = 284934747;
  repeated string searched_paths = 302953681;
  repeated string rule_ids = 212698331;
  repeated string cai_ids = 335914631;
}

message Finding {
  string check_id = 244492357;
  string path = 3212859;
  int64 line = 3117964;
  int64 column = 32237808;
  int64 end_line = 269465307;
  int64 end_column = 119242219;
  string message = 337998899;
  int64 severity = 191113633;
  int64 index = 113931026;
  string commit_date = 139249355;
  string syntactic_id = 386155329;
  string match_based_id = 394189736;
  google.protobuf.Struct metadata = 534382816;
  bool is_blocking = 487146492;
  repeated string fixed_lines = 405597072;
  ScaInfo sca_info = 493451;
  DataflowTrace dataflow_trace = 359307815;
}

message ScaInfo {
  bool dependency_match_only = 379345809;
  google.protobuf.Struct dependency_matches = 288721032;
}
